--- a/StudentsList/StudentsList.csproj
+++ b/StudentsList/StudentsList.csproj
@@ -132,6 +132,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="Content\calendar_ru.js" />
     <Content Include="Content\img\addbutton.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
