--- a/StudentsList/StudentsList.csproj
+++ b/StudentsList/StudentsList.csproj
@@ -117,9 +117,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\Default1Controller.cs" />
-    <Compile Include="Controllers\Default2Controller.cs" />
-    <Compile Include="Controllers\Default3Controller.cs" />
+    <Content Include="App_Data\StudentsList.Models.StudentsContext.mdf" />
+    <Content Include="App_Data\StudentsList.Models.StudentsContext_log.ldf">
+      <DependentUpon>StudentsList.Models.StudentsContext.mdf</DependentUpon>
+    </Content>
+    <Content Include="Content\Scripts\Group.js" />
+    <Compile Include="Controllers\GroupController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\SubjectController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -134,9 +139,9 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Content Include="Content\calendar.js" />
-    <Content Include="Content\draw.js" />
-    <Content Include="Content\getsend.js" />
+    <Content Include="Content\Scripts\calendar.js" />
+    <Content Include="Content\Scripts\draw.js" />
+    <Content Include="Content\Scripts\getsend.js" />
     <Content Include="Content\img\addbutton.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -170,24 +175,23 @@
     <Content Include="Content\img\stactive.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\script.js">
+    <Content Include="Content\Scripts\jquery-1.11.1.min.js" />
+    <Content Include="Content\Scripts\script.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Student.js" />
+    <Content Include="Content\Scripts\Student.js" />
     <Content Include="Content\style.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Subject.js" />
-    <Content Include="Content\validate.js" />
+    <Content Include="Content\Scripts\Subject.js" />
+    <Content Include="Content\Scripts\validate.js" />
     <Content Include="Global.asax" />
     <Content Include="Views\Default2\index.html" />
     <Content Include="Views\Web.config">
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
