--- a/StudentsList/StudentsList.csproj
+++ b/StudentsList/StudentsList.csproj
@@ -117,6 +117,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\StudentsList.Models.StudentsContext.mdf" />
+    <Content Include="App_Data\StudentsList.Models.StudentsContext_log.ldf">
+      <DependentUpon>StudentsList.Models.StudentsContext.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\Scripts\Group.js" />
     <Compile Include="Controllers\GroupController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -187,9 +191,7 @@
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
